--- a/package.json
+++ b/package.json
@@ -4,33 +4,36 @@
     "description": "Asynchronous URL health checker using BullMQ, Redis, and GitLab CI/CD",
     "main": "src/server.js",
     "scripts": {
-      "dev": "nodemon src/server.js",
-      "start": "node src/server.js",
-      "lint": "eslint .",
-      "test": "jest"
+        "dev": "nodemon src/server.js",
+        "start": "node src/server.js",
+        "lint": "eslint .",
+        "test": "jest"
     },
     "keywords": [
-      "url",
-      "health-checker",
-      "bullmq",
-      "ci/cd",
-      "redis",
-      "nodejs"
+        "url",
+        "health-checker",
+        "bullmq",
+        "ci/cd",
+        "redis",
+        "nodejs"
     ],
     "author": "Karan Sharma",
     "license": "MIT",
     "dependencies": {
-      "axios": "^1.6.8",
-      "bullmq": "^4.10.1",
-      "dotenv": "^16.4.5",
-      "express": "^4.19.2",
-      "ioredis": "^5.3.3"
+        "@bull-board/api": "^6.12.0",
+        "@bull-board/express": "^6.12.0",
+        "axios": "^1.6.8",
+        "bull-board": "^0.10.0",
+        "bullmq": "^4.10.1",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "express-basic-auth": "^1.2.1",
+        "ioredis": "^5.3.3"
     },
     "devDependencies": {
-      "eslint": "^8.56.0",
-      "jest": "^29.7.0",
-      "nodemon": "^3.1.0",
-      "supertest": "^6.3.4"
+        "eslint": "^8.56.0",
+        "jest": "^29.7.0",
+        "nodemon": "^3.1.0",
+        "supertest": "^6.3.4"
     }
-  }
-  
+}
