--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "axios": "^1.6.8",
         "bull-board": "^0.10.0",
         "bullmq": "^4.10.1",
+        "chart.js": "^4.5.0",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "express-basic-auth": "^1.2.1",
