--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "express-basic-auth": "^1.2.1",
-        "ioredis": "^5.3.3"
+        "ioredis": "^5.3.3",
+        "prom-client": "^15.1.3"
     },
     "devDependencies": {
         "eslint": "^8.56.0",
