--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
         "prom-client": "^15.1.3"
     },
     "devDependencies": {
-        "eslint": "^8.56.0",
+        "@eslint/js": "^9.32.0",
+        "eslint": "^8.57.1",
+        "globals": "^16.3.0",
         "jest": "^29.7.0",
         "nodemon": "^3.1.0",
         "supertest": "^6.3.4"
