--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "express": "^4.19.2",
         "express-basic-auth": "^1.2.1",
         "ioredis": "^5.3.3",
+        "node-cron": "^4.2.1",
+        "nodemailer": "^7.0.5",
         "prom-client": "^15.1.3"
     },
     "devDependencies": {
